--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,13 +59,18 @@ strong {
 }
 
 @media print {
-  body {
-    background: none;
-    color: #000;
-  }
-
   a::after {
     content: " (" attr(href) ")";
-    font-size: 0.8em;
+    font-size: 90%;
+    color: #555;
+  }
+
+  nav, footer {
+    display: none;
+  }
+
+  body {
+    font-size: 11pt;
+    line-height: 1.4;
   }
 }
